--- a/App/MainWindow/MainWindow.ui
+++ b/App/MainWindow/MainWindow.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>MainWindow</class>
- <widget class="QWidget" name="MainWindow">
+ <widget class="QMainWindow" name="MainWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1600</width>
-    <height>922</height>
+    <height>932</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -23,244 +23,257 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>电火花成形机床数控系统——动态特性验证系统</string>
+   <string>MainWindow</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout_2">
-   <item>
-    <layout class="QVBoxLayout" name="verticalLayout_2">
-     <item>
-      <widget class="QFrame" name="frame_coordpanel">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>1200</width>
-         <height>330</height>
-        </size>
-       </property>
-       <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QTabWidget" name="tabWidget_main">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="currentIndex">
-        <number>0</number>
-       </property>
-       <widget class="QWidget" name="tab_move">
-        <attribute name="title">
-         <string>Move</string>
-        </attribute>
-        <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <widget class="QGroupBox" name="groupBox_pm">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="title">
-            <string>PointMove</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QGroupBox" name="groupBox_gcode">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="title">
-            <string>GCode</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
+  <widget class="QWidget" name="centralwidget">
+   <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <item>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QFrame" name="frame_coordpanel">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>1200</width>
+          <height>330</height>
+         </size>
+        </property>
+        <property name="frameShape">
+         <enum>QFrame::StyledPanel</enum>
+        </property>
+        <property name="frameShadow">
+         <enum>QFrame::Raised</enum>
+        </property>
        </widget>
-       <widget class="QWidget" name="tab_io">
-        <attribute name="title">
-         <string>IO</string>
-        </attribute>
+      </item>
+      <item>
+       <widget class="QTabWidget" name="tabWidget_main">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="currentIndex">
+         <number>0</number>
+        </property>
+        <widget class="QWidget" name="tab_move">
+         <attribute name="title">
+          <string>Move</string>
+         </attribute>
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <item>
+           <widget class="QGroupBox" name="groupBox_pm">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="title">
+             <string>PointMove</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QGroupBox" name="groupBox_gcode">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="title">
+             <string>GCode</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+        <widget class="QWidget" name="tab_io">
+         <attribute name="title">
+          <string>IO</string>
+         </attribute>
+        </widget>
+        <widget class="QWidget" name="tab_power">
+         <attribute name="title">
+          <string>Power</string>
+         </attribute>
+        </widget>
+        <widget class="QWidget" name="tab_test">
+         <attribute name="title">
+          <string>Test</string>
+         </attribute>
+         <widget class="QPushButton" name="pb_test_stop">
+          <property name="geometry">
+           <rect>
+            <x>440</x>
+            <y>360</y>
+            <width>89</width>
+            <height>25</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>test_stop</string>
+          </property>
+         </widget>
+         <widget class="QPushButton" name="pb_test_pause">
+          <property name="geometry">
+           <rect>
+            <x>440</x>
+            <y>240</y>
+            <width>89</width>
+            <height>25</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>test_pause</string>
+          </property>
+         </widget>
+         <widget class="QPushButton" name="pb_test_estop">
+          <property name="geometry">
+           <rect>
+            <x>440</x>
+            <y>410</y>
+            <width>89</width>
+            <height>25</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>test_estop</string>
+          </property>
+         </widget>
+         <widget class="QPushButton" name="pb_test_resume">
+          <property name="geometry">
+           <rect>
+            <x>440</x>
+            <y>300</y>
+            <width>89</width>
+            <height>25</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>test_resume</string>
+          </property>
+         </widget>
+         <widget class="QPushButton" name="pb_test_start">
+          <property name="geometry">
+           <rect>
+            <x>440</x>
+            <y>190</y>
+            <width>89</width>
+            <height>25</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>test_start</string>
+          </property>
+         </widget>
+         <widget class="QWidget" name="test_codeeditor_widget" native="true">
+          <property name="geometry">
+           <rect>
+            <x>570</x>
+            <y>70</y>
+            <width>481</width>
+            <height>521</height>
+           </rect>
+          </property>
+         </widget>
+        </widget>
        </widget>
-       <widget class="QWidget" name="tab_power">
-        <attribute name="title">
-         <string>Power</string>
-        </attribute>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <item>
+       <widget class="QGroupBox" name="groupBox_info">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>370</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="title">
+         <string>Status Panel</string>
+        </property>
        </widget>
-       <widget class="QWidget" name="tab_test">
-        <attribute name="title">
-         <string>Test</string>
-        </attribute>
-        <widget class="QPushButton" name="pb_test_stop">
-         <property name="geometry">
-          <rect>
-           <x>440</x>
-           <y>360</y>
-           <width>89</width>
-           <height>25</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>test_stop</string>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="pb_test_pause">
-         <property name="geometry">
-          <rect>
-           <x>440</x>
-           <y>240</y>
-           <width>89</width>
-           <height>25</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>test_pause</string>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="pb_test_estop">
-         <property name="geometry">
-          <rect>
-           <x>440</x>
-           <y>410</y>
-           <width>89</width>
-           <height>25</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>test_estop</string>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="pb_test_resume">
-         <property name="geometry">
-          <rect>
-           <x>440</x>
-           <y>300</y>
-           <width>89</width>
-           <height>25</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>test_resume</string>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="pb_test_start">
-         <property name="geometry">
-          <rect>
-           <x>440</x>
-           <y>190</y>
-           <width>89</width>
-           <height>25</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>test_start</string>
-         </property>
-        </widget>
-        <widget class="QWidget" name="test_codeeditor_widget" native="true">
-         <property name="geometry">
-          <rect>
-           <x>570</x>
-           <y>70</y>
-           <width>481</width>
-           <height>521</height>
-          </rect>
-         </property>
-        </widget>
+      </item>
+      <item>
+       <widget class="QGroupBox" name="groupBox_test">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>370</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="title">
+         <string>TestPanel</string>
+        </property>
        </widget>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <layout class="QVBoxLayout" name="verticalLayout">
-     <item>
-      <widget class="QGroupBox" name="groupBox_info">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>370</width>
-         <height>16777215</height>
-        </size>
-       </property>
-       <property name="title">
-        <string>Status Panel</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QGroupBox" name="groupBox_test">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>370</width>
-         <height>16777215</height>
-        </size>
-       </property>
-       <property name="title">
-        <string>TestPanel</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-  </layout>
+      </item>
+     </layout>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QMenuBar" name="menubar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>1600</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
