--- a/App/InfoPanel/InfoPanel.ui
+++ b/App/InfoPanel/InfoPanel.ui
@@ -6,37 +6,16 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>309</width>
-    <height>399</height>
+    <width>264</width>
+    <height>348</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
-    <widget class="QGroupBox" name="groupBox_regularstate">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>0</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>16777215</width>
-       <height>16777215</height>
-      </size>
-     </property>
-     <property name="title">
-      <string>RegularState</string>
-     </property>
+  <layout class="QGridLayout" name="gridLayout_3">
+   <item row="0" column="0">
+    <widget class="QWidget" name="widget" native="true">
      <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
        <widget class="QPushButton" name="pb_display_ecat_connected">
@@ -51,8 +30,8 @@
         </property>
         <property name="minimumSize">
          <size>
-          <width>85</width>
-          <height>45</height>
+          <width>70</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -64,6 +43,41 @@
         <property name="text">
          <string>Ecat
 Connected</string>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
+        </property>
+        <property name="autoExclusive">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QPushButton" name="pb_display_ecat_enabled">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>70</width>
+          <height>40</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>60</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Ecat
+Enabled</string>
         </property>
         <property name="checkable">
          <bool>true</bool>
@@ -86,8 +100,8 @@ Connected</string>
         </property>
         <property name="minimumSize">
          <size>
-          <width>85</width>
-          <height>45</height>
+          <width>70</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -108,7 +122,7 @@ Enabled</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="2">
+      <item row="1" column="1">
        <widget class="QPushButton" name="pb_display_touch_detected">
         <property name="enabled">
          <bool>false</bool>
@@ -121,8 +135,8 @@ Enabled</string>
         </property>
         <property name="minimumSize">
          <size>
-          <width>85</width>
-          <height>45</height>
+          <width>70</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -143,7 +157,7 @@ Detected</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="3">
+      <item row="1" column="2">
        <widget class="QPushButton" name="pb_display_touch_warning">
         <property name="enabled">
          <bool>false</bool>
@@ -156,8 +170,8 @@ Detected</string>
         </property>
         <property name="minimumSize">
          <size>
-          <width>85</width>
-          <height>45</height>
+          <width>70</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -178,45 +192,10 @@ Warning</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="2">
-       <widget class="QPushButton" name="pb_display_ecat_enabled">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>85</width>
-          <height>45</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>16777215</width>
-          <height>60</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>Ecat
-Enabled</string>
-        </property>
-        <property name="checkable">
-         <bool>true</bool>
-        </property>
-        <property name="autoExclusive">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
      </layout>
     </widget>
    </item>
-   <item>
+   <item row="1" column="0">
     <widget class="QGroupBox" name="groupBox_mainmode">
      <property name="title">
       <string>MainMode</string>
@@ -235,8 +214,8 @@ Enabled</string>
         </property>
         <property name="minimumSize">
          <size>
-          <width>85</width>
-          <height>45</height>
+          <width>70</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -269,8 +248,8 @@ Enabled</string>
         </property>
         <property name="minimumSize">
          <size>
-          <width>85</width>
-          <height>45</height>
+          <width>70</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -303,8 +282,8 @@ Enabled</string>
         </property>
         <property name="minimumSize">
          <size>
-          <width>85</width>
-          <height>45</height>
+          <width>70</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -327,7 +306,7 @@ Enabled</string>
      </layout>
     </widget>
    </item>
-   <item>
+   <item row="2" column="0">
     <widget class="QGroupBox" name="groupBox_autostate">
      <property name="title">
       <string>AutoState</string>
@@ -346,8 +325,8 @@ Enabled</string>
         </property>
         <property name="minimumSize">
          <size>
-          <width>85</width>
-          <height>45</height>
+          <width>70</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -380,8 +359,8 @@ Enabled</string>
         </property>
         <property name="minimumSize">
          <size>
-          <width>85</width>
-          <height>45</height>
+          <width>70</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -414,8 +393,8 @@ Enabled</string>
         </property>
         <property name="minimumSize">
          <size>
-          <width>85</width>
-          <height>45</height>
+          <width>70</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -448,8 +427,8 @@ Enabled</string>
         </property>
         <property name="minimumSize">
          <size>
-          <width>85</width>
-          <height>45</height>
+          <width>70</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -482,8 +461,8 @@ Enabled</string>
         </property>
         <property name="minimumSize">
          <size>
-          <width>85</width>
-          <height>45</height>
+          <width>70</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -516,8 +495,8 @@ Enabled</string>
         </property>
         <property name="minimumSize">
          <size>
-          <width>85</width>
-          <height>45</height>
+          <width>70</width>
+          <height>40</height>
          </size>
         </property>
         <property name="maximumSize">
